test/negative/t10.mli
(*@ open T9 *)

(* ERROR: should fail when loading T9 *)
