test/negative/t10.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| open T9 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ open T9 *)
File "./t9.mli", line 1, characters 45-46:
Error: Type mismatch. Cannot match int with bool
